--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: Lato;
+  src: url(https://fonts.googleapis.com/css?family=Lato);
+}
+
+@font-face {
+  font-family: Montserrat;
+  src: url(https://fonts.googleapis.com/css?family=Montserrat);
+}
+
 body {
     font: 400 15px/1.8 Lato, sans-serif;
     color: #777;
