--- a/style.css
+++ b/style.css
@@ -13,8 +13,12 @@
   src: url(https://fonts.googleapis.com/css?family=Quicksand);
 }
 
+@@font-face {
+  font-family: Spicy Rice;
+  src: url(https://fonts.googleapis.com/css?family=Spicy+Rice);
+}
 body {
-    font: 400 15px/1.8 Lato, sans-serif;
+    font: 400 15px/1.8 'Lato', sans-serif;
     color: #777;
 }
 
@@ -25,7 +29,7 @@ body {
 
 h1 {
     font-size: 30px;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Spicy Rice', cursive;
 }
 
 h3 {
