--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
 h1 {
     font-size: 30px;
-    font-family: 'Spicy Rice', cursive;
+    font-family: 'Quicksand', sans-serif;
 }
 
 h3 {
