--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 }
 
 @@font-face {
-  font-family: Spicy Rice;
+  font-family: Oswald;
   src: url(https://fonts.googleapis.com/css?family=Spicy+Rice);
 }
 body {
@@ -29,7 +29,7 @@ body {
 
 h1 {
     font-size: 30px;
-    font-family: 'Quicksand', sans-serif;
+    font-family: 'Oswald', sans-serif;
 }
 
 h3 {
